tests/ivg/invalid/invalid_image_alignment.ivg
format IVG-3
// image with invalid alignment token
image 0,0 "foo" align:left,side
